@@ -53,6 +53,8 @@ module ElasticAPM
       def self.name_from_payload(payload_object)
         if payload_object.is_a?(::Delayed::PerformableMethod)
           performable_method_name(payload_object)
+        elsif payload_object.class.name == 'ActiveJob::QueueAdapters::DelayedJobAdapter::JobWrapper'
+          payload_object.job_data['job_class']
         else
           payload_object.class.name
         end
