@@ -20,6 +20,11 @@
 require 'spec_helper'
 
 begin
+  require 'active_job'
+rescue LoadError
+end
+
+begin
   require 'delayed_job'
   require 'delayed/performable_mailer' # or the Rails spec explodes
 rescue LoadError
@@ -66,6 +71,38 @@ if defined?(Delayed::Backend)
         expect(transaction.name).to eq 'ElasticAPM::TestJob'
         expect(transaction.type).to eq 'Delayed::Job'
         expect(transaction.result).to eq 'success'
+      end
+
+      context 'ActiveJob', if: defined?(ActiveJob) do
+        before :all do
+          # rubocop:disable Style/ClassAndModuleChildren
+          class ::ActiveJobbyJob < ActiveJob::Base
+            # rubocop:enable Style/ClassAndModuleChildren
+            self.queue_adapter = :delayed_job
+            self.logger = nil # stay quiet
+
+            def perform
+              'ok'
+            end
+          end
+        end
+
+        after :all do
+          Object.send(:remove_const, :ActiveJobbyJob)
+        end
+
+        it 'instruments class-based job transaction for active job' do
+          job = ActiveJobbyJob.new
+
+          with_agent do
+            Delayed::Job.new(job).invoke_job
+          end
+
+          transaction, = @intercepted.transactions
+          expect(transaction.name).to eq 'ActiveJobbyJob'
+          expect(transaction.type).to eq 'Delayed::Job'
+          expect(transaction.result).to eq 'success'
+        end
       end
 
       it 'instruments method-based job transaction' do
